--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.9.0",
+    "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.1",
@@ -28,21 +28,20 @@
     "@tanstack/match-sorter-utils": "^8.19.4",
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-table": "^8.20.5",
-    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.2.0",
-    "iron-session": "^8.0.3",
     "lucide-react": "^0.437.0",
     "next": "14.2.7",
+    "next-auth": "4.24.5",
     "next-themes": "^0.3.0",
     "node-cache": "^5.1.2",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
-    "react-hook-form": "^7.53.0",
+    "react-hook-form": "^7.53.2",
     "recharts": "^2.13.3",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
@@ -52,6 +51,8 @@
   },
   "devDependencies": {
     "@types/cookie": "^0.6.0",
+    "@types/js-cookie": "^3.0.6",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
